# rusttracer

./: Cargo.toml  README.md
scenes/: initial.json
src/: main.rs
src/bvh/: README.md  aabb.rs  mod.rs
src/image/: README.md  image.rs  mod.rs
src/scene/: README.md  camera.rs  light.rs  mod.rs  objects.rs
