[package]
name = "rtx"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] } # For JSON deserialization
serde_json = "1.0"                                # To handle JSON files
log = "0.4" 

[profile.release]
lto = true                                       # Enable link-time optimizations
codegen-units = 1
